creating min.css

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>ShopOnline</title>
   <link rel="stylesheet" href="css/normalize.css">
 <!--  <link rel="stylesheet" href="styles/global.css">-->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="preload" href="fonts/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/lato-bold.woff2" as="font" type="font/woff2" crossorigin>
-  <script src="script/script.js" type="module"></script>
+  <script src="script/modules.js" type="module"></script>
   <script src="script/main.js" type="module"></script>
 </head>
 <body>
