--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="preload" href="fonts/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/lato-bold.woff2" as="font" type="font/woff2" crossorigin>
-  <script src="script/modules.js" type="module"></script>
+  <script src="script/script.js" type="module"></script>
   <script src="script/main.js" type="module"></script>
 </head>
 <body>
